//
//    Copyright 2024 Mishmash IO UK Ltd.
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.
//

syntax = "proto3";

package io.mishmash.opentelemetry.persistence.proto.v1;

import "opentelemetry/proto/common/v1/common.proto";
import "opentelemetry/proto/trace/v1/trace.proto";

option java_package = "io.mishmash.opentelemetry.persistence.proto.v1";
option java_outer_classname = "TracesPersistenceProto";

message PersistedSpan {
  reserved 28, 29;

  // OTLP messages are essentially collections of entries (logs, metrics or traces) and a batch is 
  // one such collection. For each of these 'batches' (or messages) a timestamp (batch_timestamp) 
  // is recorded - noting when it was received, and also an UUID is generated and written to batch_UUID.
  // Additionally, each entry in a batch will have its index recorded in seq_no.
  // Together these fields can be used to, say, de-flatten data in SQL queries or something.
  int64 batch_timestamp = 1;
  string batch_UUID = 2;
  int32 seq_no = 3;

  // The following are extracted from opentelemetry.proto.resource.v1.Resource if it is present
  repeated .opentelemetry.proto.common.v1.KeyValue resource_attributes = 4;
  uint32 resource_dropped_attributes_count = 5;
  repeated .opentelemetry.proto.common.v1.EntityRef resource_entity_refs = 30;

  // The Schema URL, if known. This is the identifier of the Schema that the resource data
  // is recorded in. To learn more about Schema URL see
  // https://opentelemetry.io/docs/specs/otel/schemas/#schema-url
  // This schema_url applies to the data in the "resource" field. It does not apply
  // to the data in the "scope_logs" field which have their own schema_url field.
  string resource_schema_url = 6;

  // The following are extracted from opentelemetry.proto.common.v1.InstrumentationScope
  string scope_name = 7;
  string scope_version = 8;
  repeated .opentelemetry.proto.common.v1.KeyValue scope_attributes = 9;
  uint32 scope_dropped_attributes_count = 10;

  // the following are extracted from opentelemetry.proto.trace.v1.Span
  bytes trace_id = 11;
  bytes span_id = 12;
  string trace_state = 13;
  bytes parent_span_id = 14;
  fixed32 flags = 15;
  string name = 16;
  .opentelemetry.proto.trace.v1.Span.SpanKind kind = 17;
  fixed64 start_time_unix_nano = 18;
  fixed64 end_time_unix_nano = 19;
  repeated .opentelemetry.proto.common.v1.KeyValue attributes = 20;
  uint32 dropped_attributes_count = 21;
  repeated .opentelemetry.proto.trace.v1.Span.Event events = 22;
  uint32 dropped_events_count = 23;
  repeated .opentelemetry.proto.trace.v1.Span.Link links = 24;
  uint32 dropped_links_count = 25;
  .opentelemetry.proto.trace.v1.Status status = 26;

  // The Schema URL, if known. This is the identifier of the Schema that the log data
  // is recorded in. To learn more about Schema URL see
  // https://opentelemetry.io/docs/specs/otel/schemas/#schema-url
  string span_schema_url = 27;

  // is_valid will be false if the system found this record to not comply with OTLP specs.
  bool is_valid = 100;

  // when is_valid is false, error_message will provide some information on what was wrong.
  optional string error_message = 101;
}
